--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     #app {
         margin: 0;
         padding: 0;
-        width: 1780px;
-        height: 100%;
+        min-width: 100vw;
+        height: 100vh;
         display: block;
     }
 </style>
